--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Judges -- Great Britain -- Biography'
 - !lcsh 'Stephen, James Fitzjames, Sir, 1829-1894'
 - !lcc 'KD'
+- GITenberg
 title: 'The Life of Sir James Fitzjames Stephen, Bart., K.C.S.I.
 
   A Judge of the High Court of Justice'
